# FlatBuffersParser

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  release.sh  toolchain.cmake
functional_tests/: parser_perf_test.py  parser_rest_perf_test.py  parser_rest_test.py  parser_test.py  parser_websockets_perf_test.py  parser_websockets_test.py  reference.json  requirements.txt  run_all_tests.sh  test_helper.py  websockets_protocol.py
src/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  Client.cpp  Client.hpp  HttpHandler.cpp  HttpHandler.hpp  Parser.cpp  Parser.hpp  Socket.cpp  Socket.hpp  WebSocketHandler.cpp  WebSocketHandler.hpp  WebsocketHandler.cpp  WebsocketHandler.hpp  WebsocketReqMessage.hpp  WebsocketRespMessage.hpp  boost.cmake  main.cpp  version.hpp
src/server/: CMakeLists.txt  HttpRouter.cpp  HttpRouter.hpp  Server.cpp  Server.hpp  beast.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  net.hpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
src/utils/: Base64.hpp
test/: Arguments_test.cpp  CMakeLists.txt  Parser_test.cpp  Socket_test.cpp
tests/: CMakeLists.txt
tests/api/: conftest.py  monster.fbs  requirements.txt  test_parser_http.py  test_parser_http_perf.py  test_parser_websockets.py  test_parser_websockets_perf.py  ws_payload.py
tests/unit/: Arguments_test.cpp  CMakeLists.txt.in  Parser_test.cpp
